--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.1.8",
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "tailwindcss": "^3.1.8"
   }
 }
